# Multi-Model-Router

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
dashboard/: app.py
examples/: sdk_usage.py
src/llm_gateway/: __init__.py  circuit_breaker.py  classifier.py  config.py  gateway.py  ledger.py  models.py  router.py
src/llm_gateway/adapters/: __init__.py  base.py  mock.py  providers.py
src/llm_gateway/api/: app.py
src/llm_gateway/api/static/: app.js  index.html  styles.css
tests/: test_api.py  test_classifier.py  test_gateway.py  test_router.py
